12nov18 computerv1 ecole . prob quand pas de fichier -> segfault

--- a/computerV1/libft/Makefile
+++ b/computerV1/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: cjulliar <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/05 16:41:22 by cjulliar          #+#    #+#              #
-#    Updated: 2017/02/01 09:52:23 by cjulliar         ###   ########.fr        #
+#    Updated: 2018/11/12 11:25:14 by cjulliar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,8 @@ SOURCE = ft_memset ft_bzero ft_memcpy ft_memccpy ft_memmove ft_memchr \
 		 ft_delspcbeg ft_delspcend ft_strsplit ft_itoa ft_putchar ft_putstr \
 		 ft_putendl ft_putnbr ft_putchar_fd ft_putstr_fd ft_putendl_fd \
 		 ft_putnbr_fd ft_lstnew ft_lstdelone ft_lstdel ft_lstadd ft_lstiter \
-		 ft_lstmap ft_strfold ft_swap ft_isspace get_next_line
+		 ft_lstmap ft_strfold ft_swap ft_isspace get_next_line ft_atoidouble \
+		 ft_puissance ft_puissancedouble
 
 NAME = libft.a
 HEADER = libft.h
