13nov18 computerv1 home . fonction dans libft

--- a/computerV1/libft/Makefile
+++ b/computerV1/libft/Makefile
@@ -21,7 +21,8 @@ SOURCE = ft_memset ft_bzero ft_memcpy ft_memccpy ft_memmove ft_memchr \
 		 ft_putendl ft_putnbr ft_putchar_fd ft_putstr_fd ft_putendl_fd \
 		 ft_putnbr_fd ft_lstnew ft_lstdelone ft_lstdel ft_lstadd ft_lstiter \
 		 ft_lstmap ft_strfold ft_swap ft_isspace get_next_line ft_atoidouble \
-		 ft_puissance ft_puissancedouble
+		 ft_puissance ft_puissancedouble ft_isinteger ft_sqrtdouble ft_ismath \
+		 ft_putdouble ft_absdouble ft_abs ft_nospace ft_upper
 
 NAME = libft.a
 HEADER = libft.h
